Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ html {
   padding: 30px;
 }
 
-.mobile-menu>ul {
+.mobile-menu > ul {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -157,7 +157,7 @@ html {
   align-items: center;
 }
 
-.project-tech-stack-tags>* {
+.project-tech-stack-tags > * {
   display: inline-block;
   padding: 5px 10px;
   color: var(--dark-blue);
@@ -342,7 +342,7 @@ html {
   font-family: "Poppins", serif;
 }
 
-.project-details-modal .project-tech-stack-tags>li {
+.project-details-modal .project-tech-stack-tags > li {
   background-color: #fff;
   border: 0.52px solid #1a2236;
 }
@@ -354,8 +354,7 @@ html {
 }
 
 .project-details-modal .thumbnails > div {
-  flex-basis: 90px;
-  flex: 1;
+  flex: 1 1 90px;
 }
 
 .project-details-modal .thumbnails > div img {
@@ -381,7 +380,6 @@ html {
 }
 
 @media (min-width: 768px) {
-
   /* Desktop navbar */
   .nav {
     display: flex;
@@ -613,7 +611,7 @@ html {
     align-items: center;
   }
 
-  .project-tech-stack-tags>* {
+  .project-tech-stack-tags > * {
     display: inline-block;
     padding: 2% 5%;
     margin-right: 10px;
